# ANC_with_noise_profiling

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  anc.py  anc_dev.py  anc_stable_version.py  anc_with_noise_profile.ipynb  anc_with_noise_profile.py  anc_with_noise_profile_realtime.py  anc_with_noise_profile_realtime_ORIGINAL.py  noise_suppression.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
anc_noise_profiling/: __init__.py  __main__.py  legacy.py
anc_noise_profiling/cli/: __init__.py  main.py
anc_noise_profiling/config/: __init__.py  settings.py
anc_noise_profiling/core/: __init__.py  audio_utils.py  noise_reduction.py
anc_noise_profiling/streaming/: __init__.py  realtime.py
examples/: README.md  advanced_config.py  basic_file_processing.py  cli_examples.sh  config_example.yaml  custom_noise_profiles.py  file_processing_example.py  realtime_example.py
legacy/: README.md  anc_with_noise_profile_realtime.ipynb
src/anc_noise_profiling/: __init__.py
src/anc_noise_profiling/cli/: __init__.py  main.py
src/anc_noise_profiling/core/: __init__.py  processor.py
src/anc_noise_profiling/io/: __init__.py  audio_handler.py
src/anc_noise_profiling/profiling/: __init__.py  extractor.py
src/anc_noise_profiling/utils/: __init__.py  config.py  logging_config.py
tests/: __init__.py  test_basic.py
